[package]
name = "nclbt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.41", features = ["cargo", "derive", "wrap_help"] }
console = "0.15.8"
dialoguer = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
zvariant = { version = "5.6.0", features = ["gvariant"] }
