[package]
name = "nclbt"
version = "0.0.3"
edition = "2021"

[dependencies]
bson = "2.15.0"
clap = { version = "4.5.41", features = ["cargo", "derive", "wrap_help"] }
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
