[package]
name = "nclbt"
description = "nice command-line budget tool"
version = "0.0.4"
authors = ["Arthur Petroff <apetbrz@gmail.com>"]
edition = "2021"

[lib]
name = "nlbl"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "nclbt"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:console", "dep:dialoguer"]
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]

[profile.release]
lto = true

[dependencies]
bson = "2.15.0"
clap = { version = "4.5.41", features = [
    "cargo",
    "derive",
    "wrap_help",
], optional = true }
console = { version = "0.15.8", optional = true }
dialoguer = { version = "0.11.0", optional = true }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde-wasm-bindgen = { version = "0.6.5", optional = true }
thiserror = "2.0.12"
wasm-bindgen = { version = "0.2.100", features = [
    "serde",
    "serde-serialize",
    "serde_json",
], optional = true }
