[package]
name = "nclbt"
version = "0.0.4"
description = "nice command-line budget tool"
authors = ["Arthur Petroff <apetbrz@gmail.com>"]
edition = "2021"

[dependencies]
bson = "2.15.0"
clap = { version = "4.5.41", features = ["cargo", "derive", "wrap_help"] }
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "6.0.0"
nlbl = { path = "../nlbl" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
